syntax = "proto3";

package order;

service OrderService {
  rpc AddOrder(AddOrderRequest) returns (Order) {};
  rpc ListOrders(Empty) returns (ListOrdersResponse) {};
  rpc GetOrder(GetOrderRequest) returns (Order) {};
  rpc DeleteOrder(GetOrderRequest) returns (DeleteOrderResponse) {};
}

message Order {
  string id = 1;
  string customerId = 2;
  repeated string productIds = 3;
  repeated int32 prices = 4;
}

message GetOrderRequest {
  string id = 1;
}

message AddOrderRequest {
  string customerId = 1;
  repeated string productIds = 2;
  repeated int32 prices = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message DeleteOrderResponse {
  string id = 1;
}

message Empty {}